--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
+@import url('./assets/fonts/fonts.scss');
+/* Variables */
+:root {
+  --font-family: 'Ddt-Regular';
+  --bg-color: #202329;
+  --primary-color: #df8947;
+  --secondary-color: #50ff35;
+  --transition: 0.35s ease-in;
+  
+}
+/* Variables fin */
+
+html {
+  scroll-behavior: smooth;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* CSS Resets */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+a:hover {
+  color: var(--secondary-color);
+  transition: 0.8s;
+}
+
+body {
+  font-family: var(--font-family);
+  background: var(--bg-color);
+}
+
+.generalWidth {
+  margin: 0 30px;
+}
+
+.container--space {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 10vw;
+  align-items: center;
 }
